Done from my side , fixed image heights & card alignments with flex-start

--- a/style.css
+++ b/style.css
@@ -178,8 +178,8 @@
 
 .feature-card-section {
   display: flex;
-  align-items: center;
-  gap: 60px;
+  align-items: flex-start;
+  gap: 5%;
   justify-content: center;
   flex-wrap: wrap;
 }
@@ -240,7 +240,7 @@
 
 .thumbnail-img {
   min-width: 45%;
-  height: 425px;
+  /* height: 425px; */
   box-shadow: 0 0 50px 2px rgba(0, 0, 0, 0.2);
 }
 
@@ -483,7 +483,7 @@ footer {
     padding: 140px 30px;
     display: block;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     text-wrap: wrap;
     transform: none;
   }
@@ -532,7 +532,7 @@ footer {
   }
 
   .card-header {
-    font-size: 2rem;
+    font-size: 1.75rem;
   }
 
   .unique-header {
@@ -768,7 +768,7 @@ footer {
 
   .forest-img {
     max-height: none;
-    height: 15em;
+    min-height: 15em;
   }
 
   .container-4 {
